version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/Results/CompositeFailureResults/VonMisesSettings.rst.txt
.. vale off



:class:`VonMisesSettings`
=========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.Results.CompositeFailureResults.VonMisesSettings(internalObject: Ansys.Common.Interop.DSObjectsAuto.IDSCompositeFailureCriteriaAuto)

   Bases: :py:obj:`object`


   
   Defines the configuration for the Von Mises failure criterion for isotropic materials.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: VonMisesSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~Reset`
            - Resets the settings to their default values.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Active`
            - Active property.
          * - :py:attr:`~ConsiderInterlaminarNormalStresses`
            - Gets or sets whether interlaminar normal stresses are evaluated.
          * - :py:attr:`~EvaluateStrainFailure`
            - Gets or sets whether strain failure is evaluated. The corresponding failure label is 'vMe'.
          * - :py:attr:`~EvaluateStressFailure`
            - Gets or sets whether stress failure is evaluated. The corresponding failure label is 'vMs'
          * - :py:attr:`~StrainFailureWeightingFactor`
            - Gets or sets the weighting factor for the strain failure (vMe) evaluation.
          * - :py:attr:`~StressFailureWeightingFactor`
            - Gets or sets the weighting factor for the stress failure (vMs) evaluation.







Property detail
---------------
.. py:property:: Active
   :type: Optional[bool]


   
   Active property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConsiderInterlaminarNormalStresses
   :type: Optional[bool]


   
   Gets or sets whether interlaminar normal stresses are evaluated.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateStrainFailure
   :type: Optional[bool]


   
   Gets or sets whether strain failure is evaluated. The corresponding failure label is 'vMe'.
















   ..
       !! processed by numpydoc !!

.. py:property:: EvaluateStressFailure
   :type: Optional[bool]


   
   Gets or sets whether stress failure is evaluated. The corresponding failure label is 'vMs'
















   ..
       !! processed by numpydoc !!

.. py:property:: StrainFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the strain failure (vMe) evaluation.
















   ..
       !! processed by numpydoc !!

.. py:property:: StressFailureWeightingFactor
   :type: Optional[float]


   
   Gets or sets the weighting factor for the stress failure (vMs) evaluation.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: Reset() -> None

   
   Resets the settings to their default values.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on